Add header elements

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Code Quiz</title>
 </head>
 <body>
+    <header>
+        <div id = "viewScore"><a href = "#">View high scores</a></div>
+        <div id = "time"><p>Time: <span id="timer-value"> 0 </span></p></div>
+    </header>
+    
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
