Add three containers for content

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
         <div id = "viewScore"><a href = "#">View high scores</a></div>
         <div id = "time"><p>Time: <span id="timer-value"> 0 </span></p></div>
     </header>
-    
+    <main>
+        <div id = 'titleDiv' class = "container">
+        </div>
+        <div id = 'contentDiv' class = "container">
+        </div>
+        <div id = 'resultdiv' class = "container">
+        </div>
+    </main>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
