Add input div to html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         </div>
         <div id = 'contentDiv' class = "container">
         </div>
+        <div id = 'inputdiv' class = "container">
+        </div>
         <div id = 'resultdiv' class = "container">
         </div>
     </main>
