--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </div>
         <div id = 'contentDiv' class = "container">
         </div>
-        <div id = 'inputdiv' class = "container">
+        <div id = 'inputDiv' class = "container">
         </div>
-        <div id = 'resultdiv' class = "container">
+        <div id = 'resultDiv' class = "container">
         </div>
     </main>
     <script src="./assets/js/script.js"></script>
