Add title content and buttons to scores.html

--- a/assets/html/scores.html
+++ b/assets/html/scores.html
@@ -9,7 +9,18 @@
     <link rel="stylesheet" type="text/css" href="../../assets/css/style.css" />
 </head>
 <body>
- 
+    <main>
+        <div id="scoreBoard">
+            <h1 id="scoreBoardTtl">High Scores</h1>
+            <p id="scoreBoardPlHd"> No scores saved </p>
+            <ol id="scoreBoardTbl">
+            
+    
+            </ol>
+            <button class="scoreBoardBtns" id = "back" onclick="history.back()">Go back</button>
+            <button class="scoreBoardBtns" id = "clearScores">Clear high scores</button>
+        </div>
  </main>
+ <script src="../js/script.js"></script>
 </body>
 </html>
