Add link address to 'View high scores'

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <div id = "viewScore"><a href = "#">View high scores</a></div>
+        <div id = "viewScore"><a href = "./assets/html/scores.html">View high scores</a></div>
         <div id = "time"><p>Time: <span id="timer-value"> 0 </span></p></div>
     </header>
     <main>
