Add scores.js link to scores.html

--- a/assets/html/scores.html
+++ b/assets/html/scores.html
@@ -21,6 +21,6 @@
             <button class="scoreBoardBtns" id = "clearScores">Clear high scores</button>
         </div>
  </main>
- <script src="../js/script.js"></script>
+ <script src="../js/scores.js"></script>
 </body>
 </html>
