--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div id = "time"><p>Time: <span id="timer-value"> 0 </span></p></div>
     </header>
     <main>
+    <!-- Containers where content created dynamically can be appended -->
         <div id = 'titleDiv' class = "container">
         </div>
         <div id = 'contentDiv' class = "container">
